--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=ws-valmerdev-plus
 server.servlet.context-path=/ws-valmerdev
 server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost:3307/VALMERDEV
+spring.datasource.username=rasmoo
+spring.datasource.password=senha123
+
+spring.flyway.enabled=true
+
+
